--- a/modelPrototype.ipynb
+++ b/modelPrototype.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6d66df6c-8b54-4cc8-bff0-2140bf05a6fe",
    "metadata": {
     "editable": true,
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4c97e9de-eccf-423d-b771-d750735f4c7d",
    "metadata": {
     "editable": true,
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6c2da69a-8564-46f8-a176-73bfed8d5bc1",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "'def download_blob(bucket_name, source_blob_name, destination_file_name):\\n    from google.cloud import storage\\n    import os\\n\\n    if not destination_file_name:\\n        raise ValueError(\"destination_file_name must be a valid path string.\")\\n\\n    os.makedirs(os.path.dirname(destination_file_name), exist_ok=True)\\n\\n    storage_client = storage.Client()\\n    bucket = storage_client.bucket(bucket_name)\\n    blob = bucket.blob(source_blob_name)\\n    blob.download_to_filename(destination_file_name)\\n\\n    print(f\"Blob {source_blob_name} downloaded to {destination_file_name}.\")'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "42fd23ee-f3a9-4936-9d9c-e97eeaac78ba",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "9f7a7627-a4aa-42c8-be89-5dd06c7264ab",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "aceb1347-0f30-4c47-8f18-63c81f8fe477",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "(7043, 21)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "d9faf0ee-d679-43a9-b2e7-4b87ec75d1ee",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "       'TotalCharges', 'Churn'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "ab6b6b28-580e-4303-9b94-88cfe3a1cbf6",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "5ee21d9d-c848-42ae-bad4-12868ef4bc2f",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "77c2b2e0-bc37-4966-87a0-322ff60f3c54",
    "metadata": {
     "scrolled": true
@@ -550,7 +550,7 @@
        "max         1.000000    72.000000      118.750000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "bf8b3f82-6613-4479-b33f-ed9c26291ece",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "58ad7a1e-55aa-42f9-8bb7-430cfa9908dc",
    "metadata": {},
    "outputs": [],
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "6a914f69-b41d-4eab-9c0c-50f430b639f4",
    "metadata": {},
    "outputs": [
@@ -653,7 +653,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "107df542-e77f-4d13-b15d-8d056e226e1e",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "bddefe3b-6d4d-40cd-a0ab-e1a6b32c6467",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "aa8b6047-7d0b-4bc7-b3de-d7de17fc619d",
    "metadata": {},
    "outputs": [],
@@ -748,7 +748,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/tmp/ipykernel_75915/3818874799.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/tmp/ipykernel_80313/3818874799.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df2['Churn'] = df2['Churn'].replace({'Yes': 1, 'No': 0})\n"
      ]
     }
@@ -2496,13 +2496,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/tmp/ipykernel_75915/712738868.py:1: FutureWarning: \n",
+      "/var/tmp/ipykernel_80313/712738868.py:1: FutureWarning: \n",
       "\n",
       "`shade` is now deprecated in favor of `fill`; setting `fill=True`.\n",
       "This will become an error in seaborn v0.14.0; please update your code.\n",
       "\n",
       "  ax=sns.kdeplot(df.MonthlyCharges[(df['Churn'] == 'No')],color=\"Red\", shade = True)\n",
-      "/var/tmp/ipykernel_75915/712738868.py:3: FutureWarning: \n",
+      "/var/tmp/ipykernel_80313/712738868.py:3: FutureWarning: \n",
       "\n",
       "`shade` is now deprecated in favor of `fill`; setting `fill=True`.\n",
       "This will become an error in seaborn v0.14.0; please update your code.\n",
@@ -3690,7 +3690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 98,
    "id": "4db303cb-0383-40ab-9e50-2163d61580ff",
    "metadata": {},
    "outputs": [
@@ -3708,8 +3708,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "a8a4c660-47bb-4a26-89a9-cca91dbbed35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SeniorCitizen                                    0\n",
+      "tenure                                          32\n",
+      "MonthlyCharges                               64.85\n",
+      "TotalCharges                               2010.95\n",
+      "gender_Female                                False\n",
+      "gender_Male                                   True\n",
+      "Partner_No                                    True\n",
+      "Partner_Yes                                  False\n",
+      "Dependents_No                                 True\n",
+      "Dependents_Yes                               False\n",
+      "PhoneService_No                              False\n",
+      "PhoneService_Yes                              True\n",
+      "MultipleLines_No                              True\n",
+      "MultipleLines_No phone service               False\n",
+      "MultipleLines_Yes                            False\n",
+      "InternetService_DSL                           True\n",
+      "InternetService_Fiber optic                  False\n",
+      "InternetService_No                           False\n",
+      "OnlineSecurity_No                             True\n",
+      "OnlineSecurity_No internet service           False\n",
+      "OnlineSecurity_Yes                           False\n",
+      "OnlineBackup_No                               True\n",
+      "OnlineBackup_No internet service             False\n",
+      "OnlineBackup_Yes                             False\n",
+      "DeviceProtection_No                           True\n",
+      "DeviceProtection_No internet service         False\n",
+      "DeviceProtection_Yes                         False\n",
+      "TechSupport_No                                True\n",
+      "TechSupport_No internet service              False\n",
+      "TechSupport_Yes                              False\n",
+      "StreamingTV_No                               False\n",
+      "StreamingTV_No internet service              False\n",
+      "StreamingTV_Yes                               True\n",
+      "StreamingMovies_No                           False\n",
+      "StreamingMovies_No internet service          False\n",
+      "StreamingMovies_Yes                           True\n",
+      "Contract_Month-to-month                      False\n",
+      "Contract_One year                             True\n",
+      "Contract_Two year                            False\n",
+      "PaperlessBilling_No                          False\n",
+      "PaperlessBilling_Yes                          True\n",
+      "PaymentMethod_Bank transfer (automatic)       True\n",
+      "PaymentMethod_Credit card (automatic)        False\n",
+      "PaymentMethod_Electronic check               False\n",
+      "PaymentMethod_Mailed check                   False\n",
+      "Name: 2914, dtype: object\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "first_X_test_record = X_test.iloc[1]\n",
+    "first_y_test_record = y_test[1]\n",
+    "print(first_X_test_record)\n",
+    "print(first_y_test_record)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "3295115e-0bc7-47b7-8225-83a64f8e77da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.10/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extracting one record from X_test and reshaping it\n",
+    "single_X_test_record = X_test.iloc[1].values.reshape(1, -1) # Reshape to 2D array\n",
+    "\n",
+    "# Making the prediction\n",
+    "prediction_test = model_rf.predict(single_X_test_record)\n",
+    "\n",
+    "print(prediction_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "797feef2-7b33-4ef6-a108-e52b3785a107",
    "metadata": {},
    "outputs": [],
    "source": []
